Added: Request a friend to choose a movie together; Film page with description; Parse movie description; Photos of users in search and when choosing a partner

--- a/films/templates/admin/films/change_list.html
+++ b/films/templates/admin/films/change_list.html
@@ -3,6 +3,6 @@
 {% block object-tools-items %}
     {{ block.super }}
     <li>
-        <a href="{% url 'load_data_action' %}" class="button">Загрузить данные</a>
+        <a href="{% url 'films:load_data_action' %}" class="button">Загрузить данные</a>
     </li>
 {% endblock %}
