--- a/users/templates/users/search_users.html
+++ b/users/templates/users/search_users.html
@@ -9,7 +9,10 @@
     <ul>
         {% for user in users %}
             <li>
-                <a href="{% url 'users:user_profile' user.id %}">{{ user.username }}</a>
+                <a href="{% url 'users:user_profile' user.id %}">
+                    <img src="{{ user.photo.url }}" alt="{{ user.username }}'s photo" width="50" height="50">
+                    {{ user.username }}
+                </a>
             </li>
         {% endfor %}
     </ul>
